Revert "Fix a cargar svg"
This reverts commit 6abe250b07714d8f584b16b93a5547d3c21a6ed1.